@@ -528,6 +528,11 @@ public final class CIFSFolderAccess extends AbstractCIFSAccess implements FileSt
 
     @Override
     public String moveFolder(final String folderId, final String newParentId) throws OXException {
+        return moveFolder(folderId, newParentId, null);
+    }
+
+    @Override
+    public String moveFolder(final String folderId, final String newParentId, String newName) throws OXException {
         try {
             final String fid = checkFolderId(folderId, rootUrl);
             if (rootUrl.equalsIgnoreCase(fid)) {
@@ -551,7 +556,7 @@ public final class CIFSFolderAccess extends AbstractCIFSAccess implements FileSt
                 if (path.endsWith(SLASH)) {
                     path = path.substring(0, path.length() - 1);
                 }
-                uri.setPath(new StringBuilder(path).append('/').append(name).toString());
+                uri.setPath(new StringBuilder(path).append('/').append(null != newName ? newName : name).toString());
                 newUri = checkFolderId(uri.toString());
             }
             /*
