@@ -185,6 +185,24 @@ public interface IDBasedFolderAccess extends TransactionAware {
     String moveFolder(String folderId, String newParentId) throws OXException;
 
     /**
+     * Moves the folder identified through given identifier to the parent specified through argument <code>newParentId</code>, renaming
+     * it to the supplied new name.
+     * <p>
+     * E.g.:
+     *
+     * <pre>
+     * my.path.to.folder -&gt; my.newpath.to.newName
+     * </pre>
+     *
+     * @param folderId The folder identifier
+     * @param newParentId The identifier of the new parent to move to
+     * @param newName The new name to use for the folder, or <code>null</code> to keep the existing name
+     * @return The new identifier where the folder has been moved
+     * @throws OXException If either folder does not exist or cannot be moved
+     */
+    String moveFolder(String folderId, String newParentId, String newName) throws OXException;
+
+    /**
      * Renames the folder identified through given identifier to the specified new name.
      * <p>
      * E.g.:
